Final Deliverables/Inventory Management for Retailers/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      nodePort: 5000
  selector:
    app: v
